# patch-cli

./: CHANGELOG.md  CONTEXT_ENHANCEMENT.md  DOCKERFILE_EXAMPLES.md  DOCKER_COMPLEX_TESTING_REPORT.md  DOCKER_TESTING_COMPLETE.md  DOCKER_TEST_REPORT_SUMMARY.md  ERROR_HANDLING.md  FEATURES.md  FILES.md  FINAL_WORK_SUMMARY.md  GITHUB_REPO_CREATED.md  LSP_FIXES_SUMMARY.md  PIPED_COMMANDS.md  PIPE_DETECTION_INSPECTION.md  README.md  README_full.md  TESTING_SUMMARY.md  TEST_DOCKER_FINAL_SUMMARY.md  TEST_PIPED_REPORT.md  TEST_REPORT.md  demo_context.py  demo_errors.py  demo_low_confidence.py  demo_medium_confidence.py  demo_piped.py  demo_progress.py  demo_retry.py  demo_retry_enhanced.py  docker_test_report_20260226_132957.txt  docker_test_simulation_20260226_133057.txt  docker_test_simulation_20260226_133731.txt  docker_test_simulation_20260226_133745.txt  docker_test_simulation_20260226_134840.txt  docker_test_simulation_20260226_134844.txt  docker_test_simulation_20260226_134912.txt  docker_test_simulation_20260226_134916.txt  docker_test_simulation_20260226_134920.txt  docker_test_simulation_20260226_135017.txt  docker_test_simulation_20260226_135125.txt  docker_test_simulation_20260226_135146.txt  (+14 more)
