[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-cli"
version = "1.0.0"
authors = [
    {name = "steliosot"}
]
description = "A CLI tool that automatically fixes broken shell commands using OpenAI GPT-4o-mini"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "tqdm",
]

[project.scripts]
patch = "patch:main"

[project.urls]
Homepage = "https://github.com/steliosot/patch-cli"
Issues = "https://github.com/steliosot/patch-cli/issues"
